# mllm-public

./: CITATION.cff  LICENSE  Makefile  README.md  constants.py  pyproject.toml  requirements.txt  utils.py
experiment_configs/configs/: example_config.py  example_config.yml
experiment_configs/eval_scripts/: eval_gpt2_linear_merge.py
experiment_configs/mllm.egg-info/: PKG-INFO  SOURCES.txt
experiments/drug_experiment/: accuracy.txt  accuracy_large.txt  accuracy_merge_drug_data_dare_linear.txt  accuracy_merge_drug_data_dare_linear_new.txt  accuracy_merge_drug_data_dare_ties.txt  accuracy_merge_drug_data_dare_ties_new.txt  accuracy_merge_drug_data_linear.txt  accuracy_merge_drug_data_linear_new.txt  accuracy_merge_drug_data_ties.txt  accuracy_merge_drug_data_ties_new.txt  drug_dataset.py  drug_dataset_large.py  drug_dataset_large_test.py  drug_dataset_test.py  drug_experiment_1.sh  drug_experiment_1_new.sh  drug_experiment_large.sh  merge.sh  merge_dare_linear.yml  merge_dare_ties.yml  merge_eval.py  merge_eval.sh  merge_experiment.py  merge_experiment.yml  merge_linear.yml  merge_output.py  merge_ties.yml
new_test_loss/: cal_loss.ipynb  test_loss_exp.py  test_loss_exp.sh
notebooks/: clean_columns.ipynb  clean_columns.py  eda.ipynb  eda.py  experiments.ipynb  experiments.py  histogram.ipynb  test_loss_exp.ipynb  test_loss_exp.py  visualize.ipynb  visualize.ipynb.orig  visualize_sean_copy.ipynb  visualize_sean_copy.py
outputs/: results.txt
reading/: atao_paper_notes_jul_7.md
tests/: dummy_dataset.csv  test_main.py  test_mllm.py  ultra_llm_merged.yml
(+159 files in other folders)
